Bug 1309468 - Part 6: Disappear horizontal scrollbar of animation-timeline. r=pbro
MozReview-Commit-ID: 1j5AbHFzve5

UltraBlame original commit: 03a6c5ed7602de7a79342d8d24ff8c835021c86c

--- a/devtools/client/themes/animationinspector.css
+++ b/devtools/client/themes/animationinspector.css
@@ -246,7 +246,8 @@ body {
 .animation-timeline {
   position: relative;
   width: 100%;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 
